namespace SmartQuote.Modules.IdentityAccess.Domain.Model.Enums;

public enum AccountStatus
{
    Active,
    Disabled
}
